# ohte-harjoitustyo

./: .env  .env.test  README.md  pyproject.toml  tasks.py  tyoaikakirjanpito.md  vaatimusmaarittely.md
data/: database.sqlite  test-database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl-sekvenssikaavio.md  monopoli.md
src/: build.py  config.py  file_reader.py  front_page_view.py  index.py  initialize_database.py  login_view.py  logout_view.py  ui.py
src/entities/: budget.py  user.py
src/repositories/: budget_repository.py  user_repository.py
src/services/: budget_service.py
src/tests/: budget_repository_test.py  budget_service_test.py  user_repository_test.py
src/tests/repositories/: budget_repository_test.py  user_repository_test.py
src/ui/: budget_view.py  front_page_view.py  login_view.py  logout_view.py  ui.py
