[tool.poetry]
name = "ohte-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["alev <alev@ad.helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.1"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-dotenv = "^0.5.2"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
